[project]
name = "playto-banyan-flux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "celery>=5.6.3",
    "django>=5.2.13",
    "djangorestframework>=3.17.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
]
